tests/ui/missing_clone.stderr
error[E0277]: the trait bound `TestClass: Clone` is not satisfied
   --> tests/ui/missing_clone.rs:15:32
    |
15  |     let t: TestClass = pyvalue.extract(py).unwrap();
    |                                ^^^^^^^ the trait `Clone` is not implemented for `TestClass`
    |
    = help: the following other types implement trait `pyo3::FromPyObject<'source>`:
              <&'a PyCell<T> as pyo3::FromPyObject<'a>>
              <&'a [u8] as pyo3::FromPyObject<'a>>
              <&'py CancelledError as pyo3::FromPyObject<'py>>
              <&'py IncompleteReadError as pyo3::FromPyObject<'py>>
              <&'py InvalidStateError as pyo3::FromPyObject<'py>>
              <&'py LimitOverrunError as pyo3::FromPyObject<'py>>
              <&'py PanicException as pyo3::FromPyObject<'py>>
              <&'py PyAny as pyo3::FromPyObject<'py>>
            and 142 others
    = note: required because of the requirements on the impl of `pyo3::FromPyObject<'_>` for `TestClass`
note: required by a bound in `pyo3::Py::<T>::extract`
   --> src/instance.rs
    |
    |         D: FromPyObject<'p>,
    |            ^^^^^^^^^^^^^^^^ required by this bound in `pyo3::Py::<T>::extract`
help: consider annotating `TestClass` with `#[derive(Clone)]`
    |
4   | #[derive(Clone)]
    |
